src/objects/Navigation__c.object
<CustomObject>
    <fields>
        <fullName>Cluster__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cluster</label>
        <referenceTo>Cluster__c</referenceTo>
        <relationshipLabel>Navigations</relationshipLabel>
        <relationshipName>Navigations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <description>Autocompleted/editable field based on Name and External Id for import/export purposes.</description>
        <externalId>true</externalId>
        <inlineHelpText>Autocompleted/editable field based on Name and External Id for import/export purposes.</inlineHelpText>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>URLMask__c</fullName>
        <label>URL Mask</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Navigation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Navigation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Navigations</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Clustering__c</fullName>
        <label>Clustering</label>
    </sharingReasons>
</CustomObject>